# community-sidechain

./: Cargo.toml  Dockerfile  README.md  build.Dockerfile
.github/workflows/: build_and_test.yml  delete-release.yml  label-checker.yml  publish-docker-release.yml
app-libs/sgx-runtime/: Cargo.toml
app-libs/sgx-runtime/src/: lib.rs
app-libs/stf/: Cargo.toml
app-libs/stf/src/: encointer_helpers.rs  getter.rs  lib.rs  stf_sgx.rs  trusted_call.rs
cli/: Cargo.toml  demo_private_community.sh
cli/src/: commands.rs  main.rs  trusted_commands.rs
cli/src/ceremonies/: mod.rs
cli/src/ceremonies/commands/: attest_attendees.rs  ceremonies_command_utils.rs  claim_rewards.rs  community_infos.rs  list_attestees.rs  list_meetups.rs  list_participants.rs  mod.rs  register_participant.rs  upgrade_registration.rs
cli/src/encointer_balances/: mod.rs
cli/src/encointer_balances/commands/: balances_command_utils.rs  mod.rs  set_fee_conversion_factor.rs  transfer_all.rs
cli/src/encointer_base_cli/: mod.rs
cli/src/encointer_base_cli/commands/: mod.rs  next_phase.rs
cli/src/trusted_base_cli/commands/: balance.rs  transfer.rs
cli/src/trusted_encointer_base_cli/: mod.rs
cli/src/trusted_encointer_base_cli/commands/: make_community_private.rs  mod.rs
core-primitives/node-api/: Cargo.toml
core-primitives/node-api/api-client-extensions/: Cargo.toml
core-primitives/node-api/api-client-extensions/src/: encointer.rs  lib.rs
core-primitives/node-api/api-client-types/src/: lib.rs
core-primitives/node-api/factory/: Cargo.toml
core-primitives/ocall-api/src/: lib.rs
core-primitives/settings/src/: lib.rs
core-primitives/stf-executor/src/: executor.rs  getter_executor.rs  lib.rs  mocks.rs  state_getter.rs
core-primitives/stf-interface/src/: encointer_scheduler_pallet.rs  lib.rs
core-primitives/storage/src/: verify_storage_proof.rs
core-primitives/test/src/mock/: onchain_mock.rs
docker/: README.md  demo-direct-call.yml  demo-indirect-invocation.yml  demo-private-community.yml  demo-sidechain.yml  demo-smart-contract.yml  demo-teeracle.yml  docker-compose.yml  fork-inducer.yml  sidechain-benchmark.yml
enclave-runtime/: Cargo.toml
enclave-runtime/src/ocall/: on_chain_ocall.rs
enclave-runtime/src/test/: ceremonies_test.rs  on_chain_ocall_tests.rs  state_getter_tests.rs
enclave-runtime/src/test/mocks/: propose_to_import_call_mock.rs
local-setup/: README.md
service/: Cargo.toml
sidechain/validateer-fetch/src/: validateer.rs
