[package]
name = "itp-api-client-extensions"
version = "0.9.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0", optional = true }

# encointer
encointer-primitives = { default-features = false, git = "https://github.com/encointer/pallets.git", branch = "master", features = ["serde_derive"] }

# substrate
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-finality-grandpa = {default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

# scs
substrate-api-client = { default-features = false,  git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.28" }

# local deps
itp-types = { default-features = false,  path = "../../types" }

[features]
default = ["std"]
std = [
    "codec/std",
    "encointer-primitives/std",
    "itp-types/std",
    "sp-core/std",
    "sp-finality-grandpa/std",
    "sp-runtime/std",
    "substrate-api-client/std",
    "thiserror",
]
# used for unit testing only!
mocks = []
