[package]
name = "itp-api-client-extensions"
version = "0.9.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
serde_json = { version = "1.0.79" }
thiserror = { version = "1.0" }

# encointer
encointer-ceremonies-assignment = { git = "https://github.com/encointer/pallets.git", branch = "master" }
encointer-primitives = { git = "https://github.com/encointer/pallets.git", branch = "master", features = ["serde_derive"] }

# substrate
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

# scs
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.28" }

# local deps
itp-types = { path = "../../types" }

[features]

# used for unit testing only!
mocks = []
