[package]
name = "itp-node-api-factory"
version = "0.9.0"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
thiserror = { version = "1.0", optional = true }

# substrate
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

# local
itp-api-client-types = { default-features = false, path = "../api-client-types" }


[features]
default = ["std"]
std = [
    "sp-core/std",
    "itp-api-client-types/std",
    "thiserror",
]
